--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
         "lint": "npx eslint --max-warnings=0",
         "style:check": "npx prettier . --check",
         "style:format": "npx prettier . --write",
+        "test": "npx jest",
+        "test:coverage": "npx jest --coverage",
         "prepare": "husky"
     },
     "keywords": [
@@ -21,14 +23,18 @@
         "@eslint/compat": "^1.2.6",
         "@eslint/js": "^9.19.0",
         "@types/node": "^22",
+        "@vitest/coverage-v8": "^3.0.4",
         "builtin-modules": "^4.0.0",
         "esbuild": "^0.24.2",
         "eslint": "^9.19.0",
         "eslint-config-prettier": "^10.0.1",
         "globals": "^15.14.0",
         "husky": "^9.1.7",
+        "jest": "^29.7.0",
         "obsidian": "latest",
         "prettier": "3.4.2",
+        "ts-jest": "^29.2.5",
+        "ts-node": "^10.9.2",
         "tslib": "^2.8.1",
         "typescript": "^5.7.0",
         "typescript-eslint": "^8.22.0"
