--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -21,3 +21,6 @@ jobs:
 
             - name: 'Test'
               run: 'npm run test'
+
+            - name: 'Mutation Tests'
+              run: 'npm run test:mutation'
