--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
         "test": "npx jest",
         "test:coverage": "npx jest --coverage",
         "test:mutation": "npx stryker run",
-        "prepare": "husky"
+        "prepare": "husky",
+        "storybook": "storybook dev -p 6006",
+        "storybook:build": "storybook build"
     },
     "keywords": [
         "obsidian"
@@ -21,8 +23,15 @@
     "author": "Philip Weinke <its@weph.dev>",
     "license": "MIT",
     "devDependencies": {
+        "@chromatic-com/storybook": "^3.2.4",
         "@eslint/compat": "^1.2.6",
         "@eslint/js": "^9.19.0",
+        "@storybook/addon-essentials": "^8.5.3",
+        "@storybook/addon-interactions": "^8.5.3",
+        "@storybook/blocks": "^8.5.3",
+        "@storybook/html": "^8.5.3",
+        "@storybook/html-vite": "^8.5.3",
+        "@storybook/test": "^8.5.3",
         "@stryker-mutator/jest-runner": "^8.7.1",
         "@stryker-mutator/typescript-checker": "^8.7.1",
         "@types/node": "^22",
@@ -30,11 +39,13 @@
         "esbuild": "^0.24.2",
         "eslint": "^9.19.0",
         "eslint-config-prettier": "^10.0.1",
+        "eslint-plugin-storybook": "^0.11.2",
         "globals": "^15.14.0",
         "husky": "^9.1.7",
         "jest": "^29.7.0",
         "obsidian": "latest",
         "prettier": "3.4.2",
+        "storybook": "^8.5.3",
         "ts-jest": "^29.2.5",
         "ts-node": "^10.9.2",
         "tslib": "^2.8.1",
@@ -43,5 +54,10 @@
     },
     "engines": {
         "node": "^20"
+    },
+    "eslintConfig": {
+        "extends": [
+            "plugin:storybook/recommended"
+        ]
     }
 }
