--- a/stryker.config.json
+++ b/stryker.config.json
@@ -5,6 +5,7 @@
     "testRunner": "jest",
     "coverageAnalysis": "perTest",
     "mutate": ["src/**/*.ts", "!src/**/*.spec.ts", "!src/bookshelf-error.ts"],
+    "ignorePatterns": [".*/**/*", "reports/**/*", "src/**/*.stories.ts", "src/component/**/*"],
     "thresholds": {
         "high": 100,
         "low": 90,
