First draft of library component

--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
         "@storybook/test": "^8.5.3",
         "@stryker-mutator/jest-runner": "^8.7.1",
         "@stryker-mutator/typescript-checker": "^8.7.1",
+        "@testing-library/dom": "^10.4.0",
+        "@testing-library/user-event": "^14.6.1",
         "@types/node": "^22",
         "builtin-modules": "^4.0.0",
         "esbuild": "^0.24.2",
@@ -43,8 +45,10 @@
         "globals": "^15.14.0",
         "husky": "^9.1.7",
         "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
         "obsidian": "latest",
         "prettier": "3.4.2",
+        "shadow-dom-testing-library": "^1.11.3",
         "storybook": "^8.5.3",
         "ts-jest": "^29.2.5",
         "ts-node": "^10.9.2",
