--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
         ]
     },
     "dependencies": {
+        "chart.js": "^4.4.7",
+        "chartjs-adapter-luxon": "^1.3.1",
         "luxon": "^3.5.0"
     }
 }
