Add test data builder for books

--- a/stryker.config.json
+++ b/stryker.config.json
@@ -10,7 +10,8 @@
         "!src/bookshelf-error.ts",
         "!src/component/book-details/*",
         "!src/component/gallery/*",
-        "!src/component/reading-progress-bar-chart/*"
+        "!src/component/reading-progress-bar-chart/*",
+        "!src/support/*"
     ],
     "ignorePatterns": [".*/**/*", "reports/**/*", "src/**/*.stories.ts", "src/obsidian/**/*"],
     "thresholds": {
