Add sort options to library

--- a/stryker.config.json
+++ b/stryker.config.json
@@ -7,6 +7,7 @@
     "mutate": [
         "src/**/*.ts",
         "!src/**/*.spec.ts",
+        "!src/default-book-sort-options.ts",
         "!src/bookshelf-error.ts",
         "!src/component/book-details/*",
         "!src/component/gallery/*",
