--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "husky": "^9.1.7",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
+        "moment": "^2.30.1",
         "obsidian": "latest",
         "prettier": "3.4.2",
         "radashi": "^12.3.4",
