Add table view to library

--- a/stryker.config.json
+++ b/stryker.config.json
@@ -14,6 +14,7 @@
         "!src/component/gallery/*",
         "!src/component/reading-progress-bar-chart/*",
         "!src/component/statistics/**/*",
+        "!src/component/table/*",
         "!src/support/*"
     ],
     "ignorePatterns": [".*/**/*", "reports/**/*", "src/**/*.stories.ts", "src/obsidian/**/*"],
