Consolidate pages read chart implementations

--- a/stryker.config.json
+++ b/stryker.config.json
@@ -10,9 +10,9 @@
         "!src/default-book-sort-options.ts",
         "!src/bookshelf-error.ts",
         "!src/component/book-details/*",
+        "!src/component/chart/**/*",
         "!src/component/button/*",
         "!src/component/gallery/*",
-        "!src/component/reading-progress-bar-chart/*",
         "!src/component/star-rating/*",
         "!src/component/statistics/**/*",
         "!src/component/table/*",
