--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "@types/node": "^22",
         "builtin-modules": "^4.0.0",
         "esbuild": "^0.24.2",
+        "esbuild-copy-files-plugin": "^1.2.1",
         "eslint": "^9.19.0",
         "eslint-config-prettier": "^10.0.1",
         "eslint-plugin-storybook": "^0.11.2",
