--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "dependencies": {
         "chart.js": "^4.4.7",
         "chartjs-adapter-luxon": "^1.3.1",
+        "lit": "^3.2.1",
         "luxon": "^3.5.0"
     }
 }
