--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
         "dev": "node esbuild.config.mjs",
         "build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
         "version": "node version-bump.mjs && git add manifest.json versions.json",
-        "lint": "npx eslint --max-warnings=0",
+        "lint": "npm run lint:eslint && npm run lint:lit",
+        "lint:eslint": "npx eslint --max-warnings=0",
+        "lint:lit": "npx lit-analyzer --strict \"src/**/*.ts\"",
         "style:check": "npx prettier . --check",
         "style:format": "npx prettier . --write",
         "test": "npx jest",
@@ -52,6 +54,7 @@
         "husky": "^9.1.7",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
+        "lit-analyzer": "^2.0.3",
         "moment": "^2.30.1",
         "obsidian": "latest",
         "prettier": "3.4.2",
