--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "test": "npx jest",
         "test:coverage": "npx jest --coverage",
         "test:mutation": "npx stryker run",
+        "test:integration": "node esbuild.integration-test.config.mjs",
         "prepare": "husky",
         "storybook": "storybook dev -p 6006",
         "storybook:build": "storybook build"
