--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
         "dev": "node esbuild.config.mjs",
         "build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
         "version": "node version-bump.mjs && git add manifest.json versions.json",
-        "lint": "npm run lint:eslint && npm run lint:lit",
-        "lint:eslint": "npx eslint --max-warnings=0",
-        "lint:lit": "npx lit-analyzer --strict \"src/**/*.ts\"",
+        "lint": "npx eslint --max-warnings=0",
         "style:check": "npx prettier . --check",
         "style:format": "npx prettier . --write",
         "test": "npx jest",
@@ -32,18 +30,20 @@
         "@chromatic-com/storybook": "^3.2.4",
         "@eslint/compat": "^1.2.6",
         "@eslint/js": "^9.19.0",
-        "@storybook/addon-essentials": "^8.5.3",
-        "@storybook/addon-interactions": "^8.5.3",
-        "@storybook/blocks": "^8.5.3",
-        "@storybook/html": "^8.5.3",
-        "@storybook/html-vite": "^8.5.3",
-        "@storybook/test": "^8.5.3",
+        "@storybook/addon-essentials": "^8.6.7",
+        "@storybook/addon-interactions": "^8.6.7",
+        "@storybook/blocks": "^8.6.7",
+        "@storybook/react-vite": "^8.6.7",
+        "@storybook/test": "^8.6.7",
         "@stryker-mutator/jest-runner": "^8.7.1",
         "@stryker-mutator/typescript-checker": "^8.7.1",
         "@testing-library/dom": "^10.4.0",
+        "@testing-library/react": "^16.2.0",
         "@testing-library/user-event": "^14.6.1",
         "@types/luxon": "^3.4.2",
         "@types/node": "^22",
+        "@types/react": "^19.0.11",
+        "@types/react-dom": "^19.0.4",
         "babel-jest": "^29.7.0",
         "builtin-modules": "^4.0.0",
         "esbuild": "^0.25",
@@ -55,13 +55,11 @@
         "husky": "^9.1.7",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
-        "lit-analyzer": "^2.0.3",
         "moment": "^2.30.1",
         "obsidian": "latest",
         "prettier": "3.4.2",
         "radashi": "^12.3.4",
-        "shadow-dom-testing-library": "^1.11.3",
-        "storybook": "^8.5.3",
+        "storybook": "^8.6.7",
         "ts-jest": "^29.2.5",
         "ts-node": "^10.9.2",
         "tslib": "^2.8.1",
@@ -79,7 +77,9 @@
     "dependencies": {
         "chart.js": "^4.4.7",
         "chartjs-adapter-luxon": "^1.3.1",
-        "lit": "^3.2.1",
-        "luxon": "^3.5.0"
+        "luxon": "^3.5.0",
+        "react": "^19.0.0",
+        "react-chartjs-2": "^5.3.0",
+        "react-dom": "^19.0.0"
     }
 }
