--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
         "lib": ["DOM", "ES5", "ES6", "ES7"],
         "skipLibCheck": true,
         "esModuleInterop": true,
-        "experimentalDecorators": true
+        "experimentalDecorators": true,
+        "jsx": "react-jsx"
     },
     "include": ["src/**/*.ts"]
 }
