--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
         "lint": "npx eslint --max-warnings=0",
         "style:check": "npx prettier . --check",
         "style:format": "npx prettier . --write",
-        "test": "npx jest",
-        "test:coverage": "npx jest --coverage",
+        "test": "npx vitest run",
+        "test:watch": "npx vitest watch",
+        "test:coverage": "npx vitest run --coverage",
         "test:mutation": "npx stryker run",
         "test:integration": "node esbuild.integration-test.config.mjs",
         "prepare": "husky",
@@ -24,9 +25,6 @@
     "author": "Philip Weinke <its@weph.dev>",
     "license": "MIT",
     "devDependencies": {
-        "@babel/core": "^7.26.9",
-        "@babel/plugin-transform-runtime": "^7.26.9",
-        "@babel/preset-env": "^7.26.9",
         "@chromatic-com/storybook": "^3.2.4",
         "@eslint/compat": "^1.2.6",
         "@eslint/js": "^9.19.0",
@@ -35,8 +33,8 @@
         "@storybook/blocks": "^8.6.7",
         "@storybook/react-vite": "^8.6.7",
         "@storybook/test": "^8.6.7",
-        "@stryker-mutator/jest-runner": "^8.7.1",
         "@stryker-mutator/typescript-checker": "^8.7.1",
+        "@stryker-mutator/vitest-runner": "^8.7.1",
         "@testing-library/dom": "^10.4.0",
         "@testing-library/react": "^16.2.0",
         "@testing-library/user-event": "^14.6.1",
@@ -44,27 +42,27 @@
         "@types/node": "^22",
         "@types/react": "^19.0.11",
         "@types/react-dom": "^19.0.4",
-        "babel-jest": "^29.7.0",
-        "builtin-modules": "^4.0.0",
+        "@vitest/coverage-v8": "^3.0.9",
+        "builtin-modules": "^5.0.0",
         "esbuild": "^0.25",
         "esbuild-copy-files-plugin": "^1.2.1",
         "eslint": "^9.19.0",
         "eslint-config-prettier": "^10.0.1",
         "eslint-plugin-storybook": "^0.11.2",
-        "globals": "^15.14.0",
+        "expect": "^29.7.0",
+        "globals": "^16.0.0",
         "husky": "^9.1.7",
-        "jest": "^29.7.0",
-        "jest-environment-jsdom": "^29.7.0",
+        "jsdom": "^26.0.0",
         "moment": "^2.30.1",
         "obsidian": "latest",
-        "prettier": "3.4.2",
+        "prettier": "^3.5",
         "radashi": "^12.3.4",
         "storybook": "^8.6.7",
-        "ts-jest": "^29.2.5",
         "ts-node": "^10.9.2",
         "tslib": "^2.8.1",
         "typescript": "^5.7.0",
-        "typescript-eslint": "^8.22.0"
+        "typescript-eslint": "^8.22.0",
+        "vitest": "^3.0.9"
     },
     "engines": {
         "node": "^20"
