--- a/stryker.config.json
+++ b/stryker.config.json
@@ -2,7 +2,7 @@
     "$schema": "./node_modules/@stryker-mutator/core/schema/stryker-schema.json",
     "packageManager": "npm",
     "reporters": ["html", "clear-text", "progress"],
-    "testRunner": "jest",
+    "testRunner": "vitest",
     "coverageAnalysis": "perTest",
     "mutate": [
         "src/**/*.ts",
