--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "builtin-modules": "^5.0.0",
         "esbuild": "^0.25",
         "esbuild-copy-files-plugin": "^1.2.1",
+        "esbuild-sass-plugin": "^3.3.1",
         "eslint": "^9.19.0",
         "eslint-config-prettier": "^10.0.1",
         "eslint-plugin-storybook": "^0.11.2",
@@ -55,6 +56,7 @@
         "jsdom": "^26.0.0",
         "moment": "^2.30.1",
         "obsidian": "latest",
+        "postcss-modules": "^6.0.1",
         "prettier": "^3.5",
         "radashi": "^12.3.4",
         "storybook": "^8.6.7",
