--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
         "chart.js": "^4.4.7",
         "chartjs-adapter-luxon": "^1.3.1",
         "luxon": "^3.5.0",
+        "obsidian-daily-notes-interface": "^0.9.4",
         "react": "^19.0.0",
         "react-chartjs-2": "^5.3.0",
         "react-dom": "^19.0.0"
