--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "dependencies": {
         "chart.js": "^4.4.7",
         "chartjs-adapter-luxon": "^1.3.1",
+        "lucide-react": "^0.486.0",
         "luxon": "^3.5.0",
         "obsidian-daily-notes-interface": "^0.9.4",
         "react": "^19.0.0",
