Add grouping to library view

--- a/stryker.config.json
+++ b/stryker.config.json
@@ -11,6 +11,7 @@
         "!src/component/button/*",
         "!src/component/gallery/*",
         "!src/component/library/book-sort-options.ts",
+        "!src/component/library/book-grouping-options.ts",
         "!src/component/star-rating/*",
         "!src/component/statistics/**/*",
         "!src/component/table/*",
