--- a/stryker.config.json
+++ b/stryker.config.json
@@ -7,6 +7,7 @@
     "mutate": [
         "src/**/*.ts",
         "!src/**/*.spec.ts",
+        "!src/bookshelf/bookshelf-reference.ts",
         "!src/component/book-details/*",
         "!src/component/button/*",
         "!src/component/gallery/*",
