--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
         "obsidian-daily-notes-interface": "^0.9.4",
         "react": "^19.0.0",
         "react-chartjs-2": "^5.3.0",
-        "react-dom": "^19.0.0"
+        "react-dom": "^19.0.0",
+        "romans": "^3.0.0"
     }
 }
