--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
         "react": "^19.0.0",
         "react-chartjs-2": "^5.3.0",
         "react-dom": "^19.0.0",
-        "romans": "^3.0.0"
+        "romans": "^3.0.0",
+        "typescript-parsec": "^0.3.4"
     }
 }
