--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
         "moduleResolution": "bundler",
         "importHelpers": true,
         "isolatedModules": true,
-        "strictNullChecks": true,
+        "strict": true,
         "lib": ["DOM", "ES5", "ES6", "ES7"],
         "skipLibCheck": true,
         "esModuleInterop": true,
