--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
         "allowJs": true,
         "noImplicitAny": true,
         "noImplicitReturns": true,
+        "noImplicitOverride": true,
         "moduleResolution": "bundler",
         "importHelpers": true,
         "isolatedModules": true,
