--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,8 @@
         "noImplicitAny": true,
         "noImplicitReturns": true,
         "noImplicitOverride": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
         "moduleResolution": "bundler",
         "importHelpers": true,
         "isolatedModules": true,
