--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
         "chartjs-adapter-luxon": "^1.3.1",
         "lucide-react": "^0.507.0",
         "luxon": "^3.5.0",
+        "mdast-util-from-markdown": "^2.0.2",
         "obsidian-daily-notes-interface": "^0.9.4",
         "react": "^19.0.0",
         "react-chartjs-2": "^5.3.0",
