--- a/package.json
+++ b/package.json
@@ -25,14 +25,10 @@
     "author": "Philip Weinke <its@weph.dev>",
     "license": "MIT",
     "devDependencies": {
-        "@chromatic-com/storybook": "^3.2.4",
+        "@chromatic-com/storybook": "^4.1.0",
         "@eslint/compat": "^1.2.6",
         "@eslint/js": "^9.19.0",
-        "@storybook/addon-essentials": "^8.6.7",
-        "@storybook/addon-interactions": "^8.6.7",
-        "@storybook/blocks": "^8.6.7",
-        "@storybook/react-vite": "^8.6.7",
-        "@storybook/test": "^8.6.7",
+        "@storybook/react-vite": "^9.1.2",
         "@stryker-mutator/typescript-checker": "^9.0.1",
         "@stryker-mutator/vitest-runner": "^9.0.1",
         "@testing-library/dom": "^10.4.0",
@@ -50,7 +46,7 @@
         "esbuild-sass-plugin": "^3.3.1",
         "eslint": "^9.19.0",
         "eslint-config-prettier": "^10.0.1",
-        "eslint-plugin-storybook": "^0.12.0",
+        "eslint-plugin-storybook": "^9.1.2",
         "expect": "^29.7.0",
         "globals": "^16.0.0",
         "husky": "^9.1.7",
@@ -60,12 +56,13 @@
         "postcss-modules": "^6.0.1",
         "prettier": "^3.5",
         "radashi": "^12.5.1",
-        "storybook": "^8.6.7",
+        "storybook": "^9.1.2",
         "ts-node": "^10.9.2",
         "tslib": "^2.8.1",
         "typescript": "^5.7.0",
         "typescript-eslint": "^8.22.0",
-        "vitest": "^3.0.9"
+        "vitest": "^3.0.9",
+        "@storybook/addon-docs": "^9.1.2"
     },
     "engines": {
         "node": "^20"
